Fix header positioning on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -4,14 +4,14 @@
 }
 
 body {
+	margin: 0;
 	background-color: #332A4D;
-}
-
-#applyPage {
 	text-align: center;
 }
+
 #applyPage > svg {
 	height: 75vh;
+	max-width: 100vw;
 }
 
 #applyGroup {
